[package]
name = "simple-milli"
version = "0.1.0"
edition = "2021"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]
publish = true
readme = "README.md"

[dependencies]
milli = { git = "https://github.com/meilisearch/milli.git", tag = "v0.33.4", version = "0.33.4" }
obkv = "0.2.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tempfile = "3.3.0"
